loadbalancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: tailwind-service-loadbalancer
spec:
  type: LoadBalancer
  selector: 
    name: tailwind-loadbalancer
  ports:
    - port: 80
      targetPort: 80
