nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: tailwind-service-nodeport
spec:
  type: NodePort
  selector: 
    name: tailwind-nodeport
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
