ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: tailwind-service-ingress
spec:
  selector: 
    name: tailwind-ingress
  ports:
    - port: 80
      targetPort: 80


---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tailwind-ingress
  labels:
    name: tailwind-ingress
spec:
  rules:
    - host: nginx.dicky.local
      http:
        paths:
          - path: /
            backend:
              serviceName: tailwind-service-ingress
              servicePort: 80
